# Evolva

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  daily-optimization.yml
docs/: production-operations.md  state-migrations.md
docs/dev-loop-runs/2026-06-24-generalize-taskset-cli/: 00-requirements.md  01-plan.md  02-plan-review-rounds.md  03-implementation-log.md  04-acceptance-report.md  05-pr-summary.html
docs/dev-loop-runs/2026-07-10-industrial-agent-hardening/: 00-requirements.md  01-plan.md  02-plan-review-rounds.md  03-implementation-log.md  04-acceptance-report.md  05-pr-summary.html
docs/dev-loop-runs/2026-07-15-agent-effect/: 00-requirements.md  01-plan.md  02-plan-review-rounds.md  03-implementation-log.md  04-acceptance-report.md  05-pr-summary.html
evals/baselines/: agent_quality.json  repo_index.json  smoke.json  trace_artifacts.json
evals/tasks/: agent_quality.jsonl  security.jsonl  trace_artifacts.jsonl
evolva/: cli.py  config.py  tui.py
evolva/agent/: artifacts.py  capabilities.py  checkpoints.py  context.py  core.py  credentials.py  dream.py  evolution.py  evolution_analyzer.py  langgraph_runtime.py  llm.py  mcp.py  mcp_presets.py  memory.py  model_router.py  multi_agent.py  observability.py  policy.py  relevance.py  repo_index.py  sandbox.py  sessions.py  skills.py  state_migration.py  todo.py  tool_router.py  tracing.py
evolva/eval/: harness.py  scorers.py  taskset.py
evolva/loops/: planner.py  runner.py
evolva/maintenance/: __init__.py  optimizer.py
evolva/tools/: base.py  builtin.py  taskset.py
evolva/workflow/: engine.py
tests/: conftest.py  test_agent_cli_workflow_mcp_eval_tui.py  test_coding_tools.py  test_core.py  test_dream.py  test_llm_and_images.py  test_loops.py  test_maintenance_optimizer.py  test_relevance_tool_router.py  test_repo_index.py  test_sandbox_policy_tools.py  test_state_stores.py  test_taskset_tools.py
