[project]
name = "evolva"
version = "0.1.0"
description = "A local self-evolving super-agent with CLI/TUI chat, tools, memory, skills, MCP, and workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
evolva = "evolva.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
