[project]
name = "evolva"
version = "0.1.0"
description = "A TUI-first local self-evolving agent harness with tools, memory, skills, MCP, workflow, trace, eval, and guardrails."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["langgraph>=1.2.4", "textual>=0.89.0"]

[tool.setuptools.packages.find]
include = ["evolva*"]
exclude = ["assets*", "evals*", "tests*"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
evolva = "evolva.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
