[project]
name = "evolva"
version = "0.1.0"
description = "A TUI-first local self-evolving agent harness with tools, memory, skills, MCP, workflow, trace, eval, and guardrails."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = ["langgraph>=1.2.4", "textual>=0.89.0", "windows-curses>=2.3; sys_platform == 'win32'"]

[tool.setuptools.packages.find]
include = ["evolva*"]
exclude = ["assets*", "evals*", "tests*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "coverage[toml]>=7.0", "ruff>=0.6", "mypy>=1.8", "build>=1.0"]
credentials = ["keyring>=25"]

[project.scripts]
evolva = "evolva.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["evolva"]
omit = [
  "evolva/runtime/*",
  "evolva/workspace/*",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 160
extend-exclude = [
  ".evolva",
  "evolva/context",
  "evolva/memory",
  "evolva/todo",
  "evolva/traces",
  "evolva/eval_results",
  "evolva/dreams",
  "evolva/workspace",
  "evolva/runtime",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
warn_unused_ignores = false
